--- a/slant/app/partials/components/nav.html
+++ b/slant/app/partials/components/nav.html
@@ -266,6 +266,9 @@
                                 <li ui-sref-active="active">
                                     <a ui-sref="app.tables.smart">Smart</a>
                                 </li>
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.test">Test</a>
+                                </li>
                                 <li ui-sref-active="active">
                                     <a ui-sref="app.tables.uigrid">uiGrid</a>
                                 </li>
