--- a/slant/app/partials/Personal/SalesOderTable.html
+++ b/slant/app/partials/Personal/SalesOderTable.html
@@ -14,7 +14,14 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         
 						
-						 {{ message }}
+						 
+						 
+						 <input type="date" ng-model="DeliveryDate" style="height:25px" />
+						 
+  		
+  		<!-- <md-datepicker ng-model="DeliveryDate" md-placeholder="Enter date"></md-datepicker> -->
+  		 &nbsp;  &nbsp;
+  		<button class="btn btn-primary btn-sm" ng-click="postMessage()"   >Call Web Service</button>
                     </div>
                 </div>
             </div>
