--- a/slant/app/css/app.css
+++ b/slant/app/css/app.css
@@ -9644,7 +9644,7 @@ border-left: 3px solid transparent;
 ----------------------------------------------------------*/
 
 .page-topbar .logo-area {
-    background-image: url('../img/logo.png');
+    background-image: url('../img/CCEJ_logo_PNG.png');
     background-repeat: no-repeat;
 }
 
