--- a/slant/app/partials/components/leftbar.html
+++ b/slant/app/partials/components/leftbar.html
@@ -5,13 +5,13 @@
     <div class="profile-info" ng-show="app.settings.menuProfile">
         <div class="profile-image col-md-12 col-sm-12 col-xs-12 text-center">
             <a ui-sref="app.ui.profile">
-                <img src="data/profile/profile.png" class="img-responsive">
+                <img src="data/profile/profile-.png" class="img-responsive">
                 <span class="profile-status available"></span>
             </a>
         </div>
         <div class="profile-details col-md-12 col-sm-12 col-xs-12">
             <h3>
-                    <a ui-sref="app.ui.profile">John Carter</a>
+                    <a ui-sref="app.ui.profile">AVAXIA</a>
 
                     <!-- Available statuses: online, idle, busy, away and offline -->
                 </h3>
