--- a/slant/app/partials/Personal/SalesOderTable.html
+++ b/slant/app/partials/Personal/SalesOderTable.html
@@ -2,7 +2,7 @@
     <div class="col-lg-12" ng-controller="SalesOrderController">
         <section class="box ">
             <header class="panel_header">
-                <h2 class="title pull-left">The basics</h2>
+                <h2 class="title pull-left">Monitoring Test</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
                     <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
