--- a/slant/app/css/app.css
+++ b/slant/app/css/app.css
@@ -664,7 +664,7 @@ blockquote.pull-right {
 }
 
 blockquote.accent {
-    border-color: #FF6E40;
+    border-color: red;
 }
 
 blockquote.background {
@@ -741,7 +741,7 @@ a:focus {
 }
 
 .text-accent {
-    color: #FF6E40;
+    color: red;
 }
 
 .text-light {
@@ -808,7 +808,7 @@ a:focus {
 }
 
 .bg-accent {
-    background: #FF6E40;
+    background: red;
     padding: 3px 8px;
     color: #ffffff;
 }
@@ -862,7 +862,7 @@ a:focus {
 
 .page-topbar .logo-area {
     width: 200px;
-    background-color: #FF6E40;
+    background-color: red;
     display: block;
     min-height: 60px;
     float: left;
@@ -962,7 +962,7 @@ a:focus {
 }
 
 .page-topbar .quick-area .slantit .info-menu {
-    background-color: #FF6E40;
+    background-color: red;
     padding: 0 0px 0 0px;
 }
 
@@ -998,7 +998,7 @@ a:focus {
     content: " ";
     width: 40px;
     height: 60px;
-    background-color: #FF6E40;
+    background-color: red;
     position: absolute;
     left: -18px;
     -moz-transform: skewX(30deg);
@@ -1016,7 +1016,7 @@ a:focus {
 
 .page-topbar.chat_shift .quick-area .info-menu li.chat-slant,
 .page-topbar.chat_shift .chat-slant:before {
-    background-color: #FF6E40;
+    background-color: red;
     padding: 0px;
 }
 
@@ -1048,7 +1048,7 @@ a:focus {
     position: absolute;
     width: 60px;
     height: 3px;
-    background-color: #FF6E40;
+    background-color: red;
     content: " ";
     bottom: 0px;
     left: 58px;
@@ -1069,7 +1069,7 @@ a:focus {
     position: absolute;
     width: 60px;
     height: 3px;
-    background-color: #FF6E40;
+    background-color: red;
     content: " ";
     top: 15px;
     left: 55px;
@@ -1314,7 +1314,7 @@ a:focus {
 }
 
 .page-topbar li .notifications .idle .notice-icon i {
-    background-color: #FF6E40;
+    background-color: red;
 }
 
 .page-topbar li .notifications .offline .notice-icon i {
@@ -1501,7 +1501,7 @@ a:focus {
 }
 
 .page-topbar li.searchform .form-control:focus {
-    border-bottom: 2px solid #FF6E40;
+    border-bottom: 2px solid red;
 }
 
 .page-topbar li.searchform input[type="submit"] {
@@ -1510,7 +1510,7 @@ a:focus {
 
 .page-topbar li.searchform.focus i,
 .page-topbar li.searchform .material-icons.primary {
-    color: #FF6E40;
+    color: red;
 }
 
 @media (min-width: 992px) and (max-width: 1270px) {
@@ -1902,7 +1902,7 @@ a:focus {
 
 .profile-status.idle,
 .uprofile-status.idle {
-    background-color: #FF6E40;
+    background-color: red;
 }
 
 .profile-status.away,
@@ -2231,7 +2231,7 @@ section.accent header.panel_header .title:after,
 section.accent .content-body,
 section.accent .panel_header .actions,
 section.accent .panel_header .actions:before {
-    background-color: #FF6E40;
+    background-color: red;
     color: #f5f5f5;
 }
 
@@ -2542,13 +2542,13 @@ fieldset[disabled] .form-control {
 
 .input-group.accent .input-group-addon,
 .input-group.accent .input-group-btn button {
-    border-color: #FF6E40;
+    border-color: red;
     background-color: transparent;
-    color: #FF6E40;
+    color: red;
 }
 
 .input-group.accent .form-control {
-    border-color: #FF6E40;
+    border-color: red;
 }
 
 .input-group-btn .btn {
@@ -2807,8 +2807,8 @@ slider span.pointer.active:after {
 }
 
 .btn.btn-border.btn-accent {
-    border: 1px solid #FF6E40;
-    color: #FF6E40;
+    border: 1px solid red;
+    color: red;
     background: transparent;
 }
 
@@ -2872,7 +2872,7 @@ slider span.pointer.active:after {
 }
 
 .btn.btn-accent {
-    background: #FF6E40;
+    background: red;
     color: #ffffff;
 }
 
@@ -3318,12 +3318,12 @@ fieldset[disabled] .btn {
 }
 
 .alert-accent {
-    background-color: #FF6E40;
+    background-color: red;
     color: #ffffff;
 }
 
 .alert-accent.minimal {
-    border-left: 5px solid #FF6E40;
+    border-left: 5px solid red;
 }
 
 .notification_btns .btn {
@@ -3646,7 +3646,7 @@ fieldset[disabled] .btn {
 
 .tile-progress .progress.accent .progress-bar,
 .progress.accent .progress-bar {
-    background-color: #FF6E40;
+    background-color: red;
 }
 
 .tile-progress .progress.secondary .progress-bar,
@@ -4003,23 +4003,23 @@ fieldset[disabled] .btn {
 }
 
 .tooltip.accent .tooltip-inner {
-    background-color: #FF6E40;
+    background-color: red;
 }
 
 .tooltip.accent.top .tooltip-arrow {
-    border-top-color: #FF6E40;
+    border-top-color: red;
 }
 
 .tooltip.accent.left .tooltip-arrow {
-    border-left-color: #FF6E40;
+    border-left-color: red;
 }
 
 .tooltip.accent.right .tooltip-arrow {
-    border-right-color: #FF6E40;
+    border-right-color: red;
 }
 
 .tooltip.accent.bottom .tooltip-arrow {
-    border-bottom-color: #FF6E40;
+    border-bottom-color: red;
 }
 
 .tooltip.primary .tooltip-inner {
@@ -4137,7 +4137,7 @@ fieldset[disabled] .btn {
 }
 
 .popover.accent .popover-title {
-    background: #FF6E40;
+    background: red;
 }
 
 .popover.primary .popover-title {
@@ -4787,7 +4787,7 @@ fieldset[disabled] .btn {
     -moz-border-radius: 0px 0 0 0;
     border-radius: 0px 0 0 0;
     -webkit-border-radius: 0px 0 0 0;
-    background-color: #FF6E40;
+    background-color: red;
 }
 
 .fc-row table td {
@@ -4906,7 +4906,7 @@ fieldset[disabled] .btn {
     position: absolute;
     content: " ";
     width: 1px;
-    background-color: #FF6E40;
+    background-color: red;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.0), 0 2px 2px rgba(0, 0, 0, 0.1);
     -o-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.0), 0 2px 2px rgba(0, 0, 0, 0.1);
     -ms-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.0), 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -5026,7 +5026,7 @@ fieldset[disabled] .btn {
     top: 20px;
     left: 50%;
     margin-left: -25px;
-    background-color: #FF6E40;
+    background-color: red;
     z-index: 10;
     border: 3px solid #FFFFFF;
 }
@@ -5653,7 +5653,7 @@ table.dataTable.no-footer {
 }
 
 .icon-accent {
-    color: #FF6E40;
+    color: red;
 }
 
 .icon-primary {
@@ -5687,7 +5687,7 @@ table.dataTable.no-footer {
 .icon-accent.icon-rounded,
 .icon-accent.icon-cornered,
 .icon-accent.icon-square {
-    background-color: #FF6E40;
+    background-color: red;
     color: #ffffff;
 }
 
@@ -5741,9 +5741,9 @@ table.dataTable.no-footer {
 }
 
 .icon-accent.icon-bordered {
-    border: 1px solid #FF6E40;
+    border: 1px solid red;
     background-color: transparent;
-    color: #FF6E40;
+    color: red;
 }
 
 .icon-primary.icon-bordered {
@@ -6471,7 +6471,7 @@ code {
 }
 
 .label-accent {
-    background-color: #FF6E40;
+    background-color: red;
 }
 
 .label-info {
@@ -6569,7 +6569,7 @@ code {
 }
 
 .badge-accent {
-    background-color: #FF6E40;
+    background-color: red;
     color: #ffffff;
 }
 
@@ -6846,11 +6846,11 @@ code {
 /*collapsed menu and chat open states*/
 
 .page-topbar.sidebar_shift .logo-area {
-    background-color: #FF6E40;
+    background-color: red;
 }
 
 .page-topbar.chat_shift .logo-area {
-    background-color: #FF6E40;
+    background-color: red;
 }
 
 .chatapi-windows.hideit {
@@ -6954,7 +6954,7 @@ code {
 .page-sidebar.chat_shift #main-menu-wrapper .wraplist .sub-menu li.active .sub-menu .active a,
 .page-sidebar.collapseit #main-menu-wrapper .wraplist .sub-menu li.active .sub-menu .active a {
     background-color: #161e22;
-    border-left: 3px solid #FF6E40;
+    border-left: 3px solid red;
 }
 
 .page-sidebar.chat_shift #main-menu-wrapper .wraplist .sub-menu li.active .sub-menu a,
@@ -7253,7 +7253,7 @@ border-left: 3px solid transparent;
     font-size: 18px;
     margin: 0px 0 0px 0;
     color: #ffffff;
-    background-color: #FF6E40;
+    background-color: red;
     height: 60px;
     line-height: 60px;
 }
@@ -7338,7 +7338,7 @@ border-left: 3px solid transparent;
 .page-chatapi .group-list .group-status.away i,
 .chatapi-windows .user-window .controlbar .status.away i,
 .page-chatapi .contact-list .user-status.away i {
-    color: #FF6E40;
+    color: red;
 }
 
 .page-chatapi .contact-list .user-info {
@@ -7690,7 +7690,7 @@ border-left: 3px solid transparent;
 }
 
 .chatmsg .name .status.away {
-    color: #FF6E40;
+    color: red;
 }
 
 .chatmsg .name .status.offline {
@@ -7716,7 +7716,7 @@ border-left: 3px solid transparent;
 }
 
 .typearea i.primary {
-    color: #FF6E40;
+    color: red;
 }
 
 .typearea input {
@@ -7734,7 +7734,7 @@ border-left: 3px solid transparent;
     color: #B0BEC5;
     background-color: transparent;
     ;
-    border-bottom: 2px solid #FF6E40;
+    border-bottom: 2px solid red;
 }
 
 
@@ -7815,7 +7815,7 @@ border-left: 3px solid transparent;
 
 .mail_tabs li.active a,
 .mail_tabs li a:hover {
-    background-color: #FF6E40;
+    background-color: red;
     color: #ffffff;
 }
 
@@ -8123,7 +8123,7 @@ border-left: 3px solid transparent;
 }
 
 .r1_graph4 {
-    background: #FF6E40;
+    background: red;
     color: #ffffff;
 }
 
@@ -9096,7 +9096,7 @@ border-left: 3px solid transparent;
 }
 
 .tile-progress.inverted.text-accent .progress .progress-bar {
-    background: #FF6E40;
+    background: red;
 }
 
 .tile-progress.inverted.text-secondary .progress .progress-bar {
@@ -9720,7 +9720,7 @@ border-left: 3px solid transparent;
 
 .uprofile-info {
     padding: 25px 40px 15px 40px;
-    background: #FF6E40;
+    background: red;
     margin-bottom: 20px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.0), 0 2px 2px rgba(0, 0, 0, 0.1);
     -o-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.0), 0 2px 2px rgba(0, 0, 0, 0.1);
@@ -10694,7 +10694,7 @@ border-left: 3px solid transparent;
 .bg-warning{ background: #fdb45d; padding: 3px 8px; color: #ffffff;}
 .bg-danger{ background: rgba(240,80,80,1.0); padding: 3px 8px; color: #ffffff;} #f05050
 .bg-success{ background: rgba(102,189,120,1.0); padding: 3px 8px; color: #ffffff;} #66bd78
-.bg-accent{ background: #FF6E40; padding: 3px 8px; color: #ffffff;} #FF6E40
+.bg-accent{ background: red; padding: 3px 8px; color: #ffffff;} red
 .bg-secondary{ background: rgba(169,169,169,1.0); padding: 3px 8px; color: #616161;} #a9a9a9
 
 #fdb45d - #fdb45d
@@ -11226,15 +11226,15 @@ fieldset[disabled] .icheck input + i:before {
 }
 
 .icheck.icheck-accent input:checked + i {
-    border-color: #FF6E40;
+    border-color: red;
 }
 
 .icheck.icheck-accent input:checked + i:before {
-    color: #FF6E40;
+    color: red;
 }
 
 .icheck.icheck-accent > i {
-    border: 1px solid #FF6E40;
+    border: 1px solid red;
 }
 
 .icheck.icheck-success input:checked + i {
