--- a/slant/app/partials/Personal/SalesOderTable.html
+++ b/slant/app/partials/Personal/SalesOderTable.html
@@ -16,8 +16,8 @@
 						
 						 
 						 
-						 <input type="date" ng-model="DeliveryDate" style="height:25px" />
-						 
+						 <b>Start Date</b> <input type="date" ng-model="CreationStartDate" style="height:25px" />&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;
+						 <b>End Date</b> <input type="date" ng-model="CreationEndDate" style="height:25px" />&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;&nbsp;  &nbsp;
   		
   		<!-- <md-datepicker ng-model="DeliveryDate" md-placeholder="Enter date"></md-datepicker> -->
   		 &nbsp;  &nbsp;
@@ -31,12 +31,12 @@
   		<td>System</td>
     	<td>Date</td>
     	
-    	<td>0-4</td>
-    	<td>5</td>
-    	<td>6</td>
-    	<td>7</td>
-    	<td>8</td>
-    	<td>9</td>
+    	<td>00-04</td>
+    	<td>05</td>
+    	<td>06</td>
+    	<td>07</td>
+    	<td>08</td>
+    	<td>09</td>
     	<td>10</td>
     	<td>11</td>
     	<td>12</td>
