--- a/slant/app/partials/Personal/SalesOderTable.html
+++ b/slant/app/partials/Personal/SalesOderTable.html
@@ -87,6 +87,18 @@
                     </div>
                 </div>
             </div>
+			
+			<div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
+                        <div class="tile-counter bg-accent">
+                            <div class="content">
+                                <i class='fa fa-user icon-lg'></i>
+                                <h2 count-to="100" value="0" duration="8" class="number_counter"></h2>
+                                <div class="clearfix"></div>
+                                <span>Sales Order </span>
+                            </div>
+                        </div>
+                    </div>
+			
         </section>
     </div>
 </div>	
