--- a/slant/app/partials/components/nav.html
+++ b/slant/app/partials/components/nav.html
@@ -7,6 +7,26 @@
             <span class="title">Dashboard</span>
         </a>
     </li>
+	
+	
+	<li href class="auto"> 
+                            <a href="javascript:;">
+                                <i class="material-icons">apps</i>
+                                <span class="title">Master Data</span>
+                                <span class="arrow material-icons">keyboard_arrow_right</span>
+                            </a>
+                            <ul class="wraplist wraplist-sub sub-menu dk" >
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.md1">MD 1</a>
+                                </li>
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.md2">MD 2</a>
+                                </li>
+                                
+
+                            </ul>
+    </li>
+	
 
                         <li href class="auto"> 
                             <a href="javascript:;">
