--- a/slant/app/partials/Personal/MasterDataMaterial.html
+++ b/slant/app/partials/Personal/MasterDataMaterial.html
@@ -1,32 +1,77 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Smart Table';">
     <div class="col-lg-12" ng-controller="MasterDataController">
         
-			
-			
-                
-			
-            
-                    <div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
+					
+					
+					
+					<div class="col-lg-12">
+        <section class="box ">
+            <header class="panel_header">
+                <h2 class="title pull-left">Master Data</h2>
+                <div class="actions panel_actions pull-right">
+                    <i class="box_toggle material-icons">expand_more</i>
+                    <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
+                    <i class="box_close material-icons">close</i>
+                </div>
+            </header>
+            <div class="content-body padding-bottom-0">
+                <div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
                         <div class="tile-counter bg-primary">
                             <div class="content">
                                 <i class='fa fa-thumbs-up icon-lg'></i>
-                                <h2 count-to="5000" value="1" duration="8" class="number_counter"></h2>
+                                <h2 count-to="12" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
-                                <span>People liked it !</span>
+                                <span>Records In SAP</span>
                             </div>
                         </div>
                     </div>
 					
-                    <div class="col-lg-3 col-md-4 col-xs-12 col-sm-6">
+                    <div class="col-lg-15 col-md-4 col-xs-2 col-sm-6">
                         <div class="tile-counter bg-primary">
                             <div class="content">
                                 <i class='fa fa-heart icon-lg'></i>
-                                <h2 count-to="{{countTo}}" value="{{countFrom}}" duration="8" class="number_counter"></h2>
+                                <h2 count-to="{{ExpectedRecords}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
-                                <span>Loved your post !</span>
+                                <span>Records In Mysql</span>
                             </div>
                         </div>
                     </div>
+					
+					<div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
+					
+					<div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">
+                                <div ui-jq="easyPieChart" ui-options="{
+                      easing: 'easeOutBounce',
+                      barColor: '{{app.color.accent}}',
+                      trackColor: '#f5f5f5',
+                      scaleColor: '#eaeaea',
+                      lineCap: 'square',
+                      lineWidth: 10,
+                      size: 120,
+                      animate: 1000,
+                      percent: 25
+                    }">
+                                    <div>
+                                        <span class="text-primary percent">{{recordSynced}}%</span>
+                                    </div>
+                                </div>
+                                <h4 class="text-center margin-top-10 margin-bottom-10">Records Synced</h4>
+                            </div>
+					
+                    </div>    
+						
+					
+                    <div class="col-lg-6 col-xs-12 col-sm-12 col-md-6">         
+                            </div>
+					
+                    <div class="clearfix"></div>
+                    
+                    
+                </div>
+            </div>
+        </section>
+    </div>
+					
 					
                     
              
