--- a/slant/app/partials/Personal/MasterDataMaterial.html
+++ b/slant/app/partials/Personal/MasterDataMaterial.html
@@ -18,7 +18,7 @@
                 <div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
                         <div class="tile-counter bg-primary">
                             <div class="content">
-                                <i class='fa fa-thumbs-up icon-lg'></i>
+                                <i class='fa fa-laptop icon-lg'></i>
                                 <h2 count-to="12" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
                                 <span>Records In SAP</span>
@@ -29,7 +29,7 @@
                     <div class="col-lg-15 col-md-4 col-xs-2 col-sm-6">
                         <div class="tile-counter bg-primary">
                             <div class="content">
-                                <i class='fa fa-heart icon-lg'></i>
+                                <i class='fa fa-database icon-lg'></i>
                                 <h2 count-to="{{ExpectedRecords}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
                                 <span>Records In Mysql</span>
