--- a/slant/app/partials/components/nav.html
+++ b/slant/app/partials/components/nav.html
@@ -27,6 +27,24 @@
                             </ul>
     </li>
 	
+	<li href class="auto"> 
+                            <a href="javascript:;">
+                                <i class="material-icons">apps</i>
+                                <span class="title">apps</span>
+                                <span class="arrow material-icons">keyboard_arrow_right</span>
+                            </a>
+                            <ul class="wraplist wraplist-sub sub-menu dk" >
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.test">test</a>
+                                </li>
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.test">test2</a>
+                                </li>
+                                
+
+                            </ul>
+    </li>
+	
 
                         <li href class="auto"> 
                             <a href="javascript:;">
