--- a/slant/app/partials/Personal/MasterDataMaterial.html
+++ b/slant/app/partials/Personal/MasterDataMaterial.html
@@ -19,7 +19,7 @@
                         <div class="tile-counter bg-primary">
                             <div class="content">
                                 <i class='fa fa-laptop icon-lg'></i>
-                                <h2 count-to="12" value="0" duration="1" class="number_counter"></h2>
+                                <h2 count-to="{{ExpectedRecords}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
                                 <span>Records In SAP</span>
                             </div>
@@ -30,7 +30,7 @@
                         <div class="tile-counter bg-primary">
                             <div class="content">
                                 <i class='fa fa-database icon-lg'></i>
-                                <h2 count-to="{{ExpectedRecords}}" value="0" duration="1" class="number_counter"></h2>
+                                <h2 count-to="{{insertedRow}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
                                 <span>Records In Mysql</span>
                             </div>
@@ -49,7 +49,7 @@
                       lineWidth: 10,
                       size: 120,
                       animate: 1000,
-                      percent: 25
+                      percent: 67
                     }">
                                     <div>
                                         <span class="text-primary percent">{{recordSynced}}%</span>
@@ -71,6 +71,66 @@
             </div>
         </section>
     </div>
+	
+	<div class="col-lg-12">
+        <section class="box ">
+            <header class="panel_header">
+                <h2 class="title pull-left">Contextual Table</h2>
+                <div class="actions panel_actions pull-right">
+                    <i class="box_toggle material-icons">expand_more</i>
+                    <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
+                    <i class="box_close material-icons">close</i>
+                </div>
+            </header>
+            <div class="content-body padding-bottom-15">
+                <div class="row">
+                    <div class="col-md-12 col-sm-12 col-xs-12">
+                        <table class="table table-bordered">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>First Name</th>
+                                    <th>Last Name</th>
+                                    <th>Username</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr ng-repeat="x in mdRecordsArray" >
+								<td>{{ x.Entry2 }}</td>
+								<td>{{ x.Entry2 }}</td>
+								<td>{{ x.Entry2 }}</td>
+								<td>{{ x.Entry2 }}</td>
+								
+                                </tr>
+                                
+                            </tbody>
+                        </table>
+						
+						<table class="table table-bordered table-striped" >
+  		<tr>
+  		<td>System</td>
+    	<td>Date</td>
+    	
+    
+    	
+  		</tr>
+  		<tr ng-repeat="x in mdRecordsArray   " > <!--  | filter:{Var1: idocNumber } | filter: (syncResultBool === true ? filter2 : '')  | groupBy: 'Var1'   / filter: filter2 -->
+    		
+    	<td>{{ x[0][0] }}</td>
+    	<td>{{ x[0][1] }}</td>
+    	
+    	
+
+  		</tr>
+  		</table>
+						
+						
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</div>
 					
 					
                     
