--- a/slant/app/partials/Personal/MasterDataMaterial.html
+++ b/slant/app/partials/Personal/MasterDataMaterial.html
@@ -70,7 +70,9 @@
                 </div>
             </div>
         </section>
-    </div>
+    
+	
+
 	
 	<div class="col-lg-12">
         <section class="box ">
@@ -85,43 +87,24 @@
             <div class="content-body padding-bottom-15">
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>First Name</th>
-                                    <th>Last Name</th>
-                                    <th>Username</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr ng-repeat="x in mdRecordsArray" >
-								<td>{{ x.Entry2 }}</td>
-								<td>{{ x.Entry2 }}</td>
-								<td>{{ x.Entry2 }}</td>
-								<td>{{ x.Entry2 }}</td>
-								
-                                </tr>
-                                
-                            </tbody>
-                        </table>
 						
 						<table class="table table-bordered table-striped" >
   		<tr>
-  		<td>System</td>
+  		<td>Idoc Number</td>
+    	<td>Basic Type</td>
     	<td>Date</td>
-    	
-    
-    	
+		<td>MATNR</td>
+		<td>Status</td>
   		</tr>
-  		<tr ng-repeat="x in mdRecordsArray   " > <!--  | filter:{Var1: idocNumber } | filter: (syncResultBool === true ? filter2 : '')  | groupBy: 'Var1'   / filter: filter2 -->
-    		
-    	<td>{{ x[0][0] }}</td>
-    	<td>{{ x[0][1] }}</td>
-    	
-    	
-
+		
+  		<tr ng-repeat="x in mdRecordsArray   " |  ng-class="{1 : 'danger', 0 : 'success' } [x.Entry5]" > <!--  | filter:{Var1: idocNumber } | filter: (syncResultBool === true ? filter2 : '')  | groupBy: 'Var1'   / filter: filter2 -->		
+    	<td>{{ x.Entry2 }}</td>
+		<td>{{ x.Entry3 }}</td>
+		<td>{{ x.Entry1 }}</td>
+		<td>{{ x.Entry4 }}</td>
+    	<td ng-class="{'danger' : (x.Entry5 == 1)}" >{{ x.Entry5 == 1 ? "Not Synced !!" : "Ok" }}</td>
   		</tr>
+		
   		</table>
 						
 						
@@ -130,6 +113,7 @@
             </div>
         </section>
     </div>
+	</div>
 </div>
 					
 					
