--- a/slant/app/partials/Personal/MasterDataMaterial.html
+++ b/slant/app/partials/Personal/MasterDataMaterial.html
@@ -88,7 +88,7 @@
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
 						
-						<table class="table table-bordered table-striped" >
+						<table class="table table-bordered " >
   		<tr>
   		<td>Idoc Number</td>
     	<td>Basic Type</td>
