--- a/slant/app/partials/components/nav.html
+++ b/slant/app/partials/components/nav.html
@@ -30,7 +30,7 @@
 	<li href class="auto"> 
                             <a href="javascript:;">
                                 <i class="material-icons">apps</i>
-                                <span class="title">apps</span>
+                                <span class="title">Sales order</span>
                                 <span class="arrow material-icons">keyboard_arrow_right</span>
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
