--- a/slant/app/partials/components/leftbar.html
+++ b/slant/app/partials/components/leftbar.html
@@ -5,7 +5,7 @@
     <div class="profile-info" ng-show="app.settings.menuProfile">
         <div class="profile-image col-md-12 col-sm-12 col-xs-12 text-center">
             <a ui-sref="app.ui.profile">
-                <img src="data/members/person-1.png" class="img-responsive">
+                <img src="data/members/Avaxia2.png" class="img-responsive">
                 <span class="profile-status available"></span>
             </a>
         </div>
@@ -23,7 +23,7 @@
 
     <nav ui-nav ng-include="'partials/components/nav.html'"></nav>
 
-    <!-- nav -->
+    <!-- nav 
     <div class="sidebar-graphs col-md-12">
         <h5>
               Milestone
@@ -35,7 +35,7 @@
               <span class="pull-right">65%</span>
             </h5>
         <uib-progressbar value="65" class="progress progress-sm warning"></uib-progressbar>
-    </div>
+    </div>-->
 </perfect-scrollbar>
 <!-- MAIN MENU - END -->
 <!--  SIDEBAR - END -->
