--- a/slant/app/partials/components/nav.html
+++ b/slant/app/partials/components/nav.html
@@ -35,10 +35,10 @@
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
                                 <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.test">test</a>
+                                    <a ui-sref="app.tables.test">SO Per Hour</a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.test">test2</a>
+                                    <a ui-sref="app.tables.salesOrderStatus">SO Status</a>
                                 </li>
                                 
 
