--- a/slant/app/partials/Personal/SOStatus.html
+++ b/slant/app/partials/Personal/SOStatus.html
@@ -1,5 +1,5 @@
 <div class='content-wrapper' ng-init="app.settings.pagetitle = 'Smart Table';">
-    <div class="col-lg-12" ng-controller="MasterDataController">
+    <div class="col-lg-12" ng-controller="DataTablesCtrl">
         
 					
 					
@@ -20,17 +20,25 @@
                     <i class="box_close material-icons">close</i>
                 </div>
             </header>
-            <div class="content-body padding-bottom-15">
+            
+			<div class="content-body">
                 <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-		
-			
-		
-						
-						
+                    <div class="col-md-8 col-sm-12 col-xs-12 col-md-offset-2" ng-controller="DataTablesCtrl">
+                        <table class="table table-responsive table-condensed table-striped">
+                            <tr>
+                                <th ng-repeat="label in labels">{{label}}</th>
+                            </tr>
+                            <tr ng-repeat="dataSet in data">
+                                <td ng-repeat="set in dataSet track by $index"><span style="text-align: right;">{{data[$parent.$index][$index]}}</span></td>
+                            </tr>
+                        </table>
+                        <canvas id="tables" class="chart chart-line" chart-data="data" chart-labels="labels" chart-colours="colours"></canvas>
+                        <div class="clearfix"></div>
+                        <button type="button" class="btn btn-primary pull-left margin-top-15" ng-click="randomize()">Randomize</button>
                     </div>
                 </div>
             </div>
+			
         </section>
     </div>
 	
