--- a/slant/app/partials/Personal/MasterDataMaterial.html
+++ b/slant/app/partials/Personal/MasterDataMaterial.html
@@ -77,7 +77,7 @@
 	<div class="col-lg-12">
         <section class="box ">
             <header class="panel_header">
-                <h2 class="title pull-left">Contextual Table</h2>
+                <h2 class="title pull-left">Master Data</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
                     <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
