--- a/slant/app/partials/components/nav.html
+++ b/slant/app/partials/components/nav.html
@@ -17,10 +17,18 @@
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
                                 <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.md1">MD 1</a>
+                                    <a ui-sref="app.tables.md1">MD Materials</a>
                                 </li>
                                 <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.md2">MD 2</a>
+                                    <a ui-sref="app.tables.md2">MD Customers</a>
+                                </li>
+								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.md2">MD Equipments</a>
+                                </li>
+								
+								<li ui-sref-active="active">
+                                    <a ui-sref="app.tables.md2">MD Pricing</a>
                                 </li>
                                 
 
@@ -36,14 +44,69 @@
                             <ul class="wraplist wraplist-sub sub-menu dk" >
                                 <li ui-sref-active="active">
                                     <a ui-sref="app.tables.test">SO Per Hour</a>
-                                </li>
+                                </li>							
                                 <li ui-sref-active="active">
                                     <a ui-sref="app.tables.salesOrderStatus">SO Status</a>
                                 </li>
-                                
-
                             </ul>
     </li>
+	
+	<li href class="auto"> 
+                            <a href="javascript:;">
+                                <i class="material-icons">apps</i>
+                                <span class="title">Settlement</span>
+                                <span class="arrow material-icons">keyboard_arrow_right</span>
+                            </a>
+                            <ul class="wraplist wraplist-sub sub-menu dk" >
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.test">...</a>
+                                </li>							
+                           
+                            </ul>
+    </li>
+	
+	<li href class="auto"> 
+                            <a href="javascript:;">
+                                <i class="material-icons">apps</i>
+                                <span class="title">Truck Stock</span>
+                                <span class="arrow material-icons">keyboard_arrow_right</span>
+                            </a>
+                            <ul class="wraplist wraplist-sub sub-menu dk" >
+                    						
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.salesOrderStatus">...</a>
+                                </li>
+                            </ul>
+    </li>
+	
+	<li href class="auto"> 
+                            <a href="javascript:;">
+                                <i class="material-icons">apps</i>
+                                <span class="title">Shipment</span>
+                                <span class="arrow material-icons">keyboard_arrow_right</span>
+                            </a>
+                            <ul class="wraplist wraplist-sub sub-menu dk" >
+                    						
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.salesOrderStatus">...</a>
+                                </li>
+                            </ul>
+    </li>
+	
+	<li href class="auto"> 
+                            <a href="javascript:;">
+                                <i class="material-icons">apps</i>
+                                <span class="title">Load Inbound</span>
+                                <span class="arrow material-icons">keyboard_arrow_right</span>
+                            </a>
+                            <ul class="wraplist wraplist-sub sub-menu dk" >
+                    						
+                                <li ui-sref-active="active">
+                                    <a ui-sref="app.tables.salesOrderStatus">...</a>
+                                </li>
+                            </ul>
+    </li>
+	
 	
 	
 	
