--- a/slant/app/partials/Personal/SOStatus.html
+++ b/slant/app/partials/Personal/SOStatus.html
@@ -44,7 +44,7 @@
 			<div class="content-body">
                 <div class="row">
                     <div class="input-group" inputgroup>
-                            <select class="form-control input-lg ">
+                            <select ng-model="selectedSystem" class="form-control input-lg ">
                                 <option>Select Bolton</option>
                                 <option>Ebest</option>
                                 <option>Super Daiwa</option>
