--- a/slant/app/partials/Personal/SOStatus.html
+++ b/slant/app/partials/Personal/SOStatus.html
@@ -61,7 +61,7 @@
                 </div>
 				
 				<div class="row">
-                    <div    >
+                    <div  class="col-md-8 col-sm-12 col-xs-12 col-md-offset-2"  >
                      <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels" 
 					 ng-if="showChart" chart-options="myOptions" chart-legend="true"  ></canvas>
                     </div>
