--- a/slant/app/partials/Personal/MasterDataMaterial.html
+++ b/slant/app/partials/Personal/MasterDataMaterial.html
@@ -49,7 +49,7 @@
                       lineWidth: 10,
                       size: 120,
                       animate: 1000,
-                      percent: 67
+                      percent: 95
                     }">
                                     <div>
                                         <span class="text-primary percent">{{recordSynced}}%</span>
@@ -93,6 +93,9 @@
 				
                     <div class="col-md-9 col-sm-12 col-xs-12">
                         <input id="filter" type="text" class="form-control" placeholder="Search" />
+						
+						<!-- <input type="text" ng-model="search" class="form-control" placeholder="Search"> -->
+						
 					</div>
 					
 					<div class="btn-group margin-bottom-10 margin-right-15">
@@ -106,7 +109,7 @@
 					<br>
 					
                     <div class="col-md-12 col-sm-12 col-xs-12 table-responsive">
-                        <table class="table table-striped" ui-jq="footable" data-filter="#filter" data-page-size="5" class="table table-striped">
+                        <table class="table table-striped" ui-jq="footable" data-filter="#filter" class="table table-striped">
                             <thead>
                                 <tr>
                                     <th data-toggle="true">
@@ -127,7 +130,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr ng-repeat="x in mdRecordsArray | filter:{ Entry5 : filterResult } "   >
+                                <tr dir-paginate="x in mdRecordsArray|filter:{ Entry5 : filterResult }|itemsPerPage:10" >
                                     <td>{{ x.Entry2 }}</td>
 									<td>{{ x.Entry3 }}</td>
 									<td>{{ x.Entry1 }}</td>
@@ -136,14 +139,20 @@
                                 </tr>
                                 
                             </tbody>
-                            <tfoot class="hide-if-no-paging">
+							<tfoot class="hide-if-no-paging">
                                 <tr>
-                                    <td colspan="5" class="text-center">
-                                        <ul class="pagination"></ul>
-                                    </td>
-                                </tr>
-                            </tfoot>
+                                   
+                               </tr>
+                           </tfoot>
+					
                         </table>
+						
+						<dir-pagination-controls
+							   max-size="10"
+							   direction-links="true"
+							   boundary-links="true"
+								auto-hide="true" >
+							</dir-pagination-controls>
                     </div>
             </div>    
             </div>
