--- a/slant/app/partials/Personal/MasterDataMaterial.html
+++ b/slant/app/partials/Personal/MasterDataMaterial.html
@@ -154,6 +154,8 @@
 								auto-hide="true" >
 							</dir-pagination-controls>
                     </div>
+					
+					<button class="btn btn-primary btn-sm" ng-click="CountLine()"   >Count</button>
             </div>    
             </div>
 		
