--- a/slant/app/partials/components/nav.html
+++ b/slant/app/partials/components/nav.html
@@ -17,9 +17,19 @@
                             </a>
                             <ul class="wraplist wraplist-sub sub-menu dk" >
                                 <li ui-sref-active="active">
-                                    <a ui-sref="app.tables.md1">MD Materials</a>
+                                    <a>MD Materials<span class="arrow material-icons">keyboard_arrow_right</span></a>
+                                    <ul class="wraplist wraplist-sub sub-menu dk" >
+
+                                        <li ui-sref-active="active">
+                                            <a ui-sref="app.tables.md1" >SAP & MySQL</a>
+                                        </li>
+                                        <li ui-sref-active="active">
+                                            <a>MySQL & Bolton</a>
+                                        </li>
+                                    </ul>
                                 </li>
-                                <li ui-sref-active="active">
+								
+								<li ui-sref-active="active">
                                     <a ui-sref="app.tables.md2">MD Customers</a>
                                 </li>
 								
@@ -31,8 +41,9 @@
                                     <a ui-sref="app.tables.md2">MD Pricing</a>
                                 </li>
                                 
-
+                                
                             </ul>
+                        </li>
     </li>
 	
 	<li href class="auto"> 
@@ -107,7 +118,7 @@
                             </ul>
     </li>
 	
-	
+						
 	
 	
 
