--- a/app/partials/components/nav.html
+++ b/app/partials/components/nav.html
@@ -24,7 +24,7 @@
                                             <a ui-sref="app.tables.md1" >SAP & MySQL</a>
                                         </li>
                                         <li ui-sref-active="active">
-                                            <a>MySQL & Bolton</a>
+                                            <a ui-sref="app.tables.md2" >MySQL & Bolton</a>
                                         </li>
                                     </ul>
                                 </li>
