--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -7,7 +7,7 @@
 					<div class="col-lg-12">
         <section class="box ">
             <header class="panel_header">
-                <h2 class="title pull-left">Master Data</h2>
+                <h2 class="title pull-left">Master Data - MySQL & Bolton</h2>
                 <div class="actions panel_actions pull-right">
                     <i class="box_toggle material-icons">expand_more</i>
                     <i class="box_setting material-icons" ng-click="section_modal()">mode_edit</i>
@@ -113,16 +113,13 @@
                             <thead>
                                 <tr>
                                     <th data-toggle="true">
-                                        Idoc Number
+                                        Interface Name
                                     </th>
                                     <th>
-                                        Basic Type
+                                        Records in MYSQL
                                     </th>
                                     <th data-hide="phone,tablet">
-                                        Date
-                                    </th>
-                                    <th data-hide="phone,tablet" >
-                                        MATNR
+                                        File Count
                                     </th>
                                     <th data-hide="phone">
                                         Status
@@ -130,12 +127,13 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr dir-paginate="x in mdRecordsArray|filter:{ Entry5 : filterResult }|itemsPerPage:10" >
-                                    <td>{{ x.Entry2 }}</td>
+                                <tr dir-paginate="x in mdRecordsArray|itemsPerPage:10" >
+                                    <td>{{ x.Entry1 }}</td>
+									<td>{{ x.Entry2 }}</td>
 									<td>{{ x.Entry3 }}</td>
-									<td>{{ x.Entry1 }}</td>
-									<td>{{ x.Entry4 }}</td>
-									<td><span ng-class="{1 : 'label label-danger', 0 : 'label label-success' } [x.Entry5] " >{{ x.Entry5 == 1 ? "Not Synced" : "Synced" }}</span></td>
+									<td><span ng-class="{false : 'label label-danger', true : 'label label-success' } [x.Entry2==x.Entry3] " >{{ (x.Entry2!=x.Entry3) ? "Not Synced" : "Synced" }}</span></td>
+
+									
                                 </tr>
                                 
                             </tbody>
