--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -18,10 +18,10 @@
                 <div class="col-lg-15 col-md-4 col-xs-12 col-sm-6">
                         <div class="tile-counter bg-primary">
                             <div class="content">
-                                <i class='fa fa-laptop icon-lg'></i>
-                                <h2 count-to="{{ExpectedRecords}}" value="0" duration="1" class="number_counter"></h2>
+                                <i class='fa fa-database icon-lg'></i>
+                                <h2 count-to="{{MysqlRecords}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
-                                <span>Records In SAP</span>
+                                <span>Records In MySQL</span>
                             </div>
                         </div>
                     </div>
@@ -29,10 +29,10 @@
                     <div class="col-lg-15 col-md-4 col-xs-2 col-sm-6">
                         <div class="tile-counter bg-primary">
                             <div class="content">
-                                <i class='fa fa-database icon-lg'></i>
-                                <h2 count-to="{{insertedRow}}" value="0" duration="1" class="number_counter"></h2>
+                                <i class='fa fa-file-o'></i>
+                                <h2 count-to="{{missingRows}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
-                                <span>Records In Mysql</span>
+                                <span>Records In Generated file</span>
                             </div>
                         </div>
                     </div>
