--- a/app/partials/Personal/MasterDataMaterialBolton.html
+++ b/app/partials/Personal/MasterDataMaterialBolton.html
@@ -32,7 +32,7 @@
                                 <i class='fa fa-file-o'></i>
                                 <h2 count-to="{{missingRows}}" value="0" duration="1" class="number_counter"></h2>
                                 <div class="clearfix"></div>
-                                <span>Generated files Missing Records</span>
+                                <span>Generated files with completed Records</span>
                             </div>
                         </div>
                     </div>
@@ -50,7 +50,7 @@
                                         <span class="text-primary percent">{{percentage}}%</span>
                                     </div>
                                 </div>
-                                <h4 class="text-center margin-top-10 margin-bottom-10">Records Synced</h4>
+                                <h4 class="text-center margin-top-10 margin-bottom-10">Completed Files</h4>
                             </div>
 					
                     </div>    
